src/styles/Home.module.scss
.mainContainer {
  height: 100dvh;
  width: 100dvw;
  background-color: black;
}

.videoContainer {
  height: 100vh;
  width: 100vw;
  background-color: #01002b;
  overflow: hidden;

  display: flex;
  justify-content: center;
  align-items: center;

  video {
    height: 100%;
    width: 100%;
    object-fit: cover;
  }
}

.logoContainer {
  height: 250px;
  width: 250px;
  overflow: hidden;
  position: absolute;
  bottom: 1%;
  left: 1%;

  img {
    height: 100%;
    width: 100%;
    object-fit: cover;
    opacity: 0.9;
    filter: brightness(90%);
    // filter: blur(1px);
  }
}

.clockContainer {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100vw;
  height: 50%;
  gap: 5%;
  bottom: 10%;
}

@media screen and (min-width: 1200px) {
  .videoContainer {
    video {
      height: auto;
      width: 100%;
    }
  }
}

@media only screen and (min-device-width: 320px) and (max-device-width: 767px) and (-webkit-min-device-pixel-ratio: 1) {
  .mainContainer {
    background-color: #01002b;
    // background-color: white;
    height: 100dvh;
    width: 100dvw;
    overflow: hidden;
  }

  .videoContainer {
    height: 100dvh;
    width: 100dvw;
    background-color: #01002b;
    overflow: hidden;

    display: flex;
    justify-content: center;
    align-items: center;

    video {
      height: auto;
      width: 125%;
    }

    .logoContainer {
      height: 200px;
      width: 200px;
      overflow: hidden;
      position: absolute;
      top: 1%;
      width: 100%;
      display: flex;
      justify-content: center;
      align-items: center;

      img {
        height: 100%;
        width: 100%;
        object-fit: contain;
        opacity: 0.9;
        filter: brightness(90%);
        // filter: blur(1px);
      }
    }

    .clockContainer {
      position: absolute;
      bottom: 200px;
      height: 40%;
    }
  }
}

